Fix stacking issue on smaller screens

--- a/src/styles/Experience.module.css
+++ b/src/styles/Experience.module.css
@@ -1,23 +1,73 @@
+/* Job Name Styling */
 .JobName {
- border-left: 2px solid rgb(57, 52, 52);
- margin-bottom: 10px;
- 
+  border-left: 2px solid rgb(57, 52, 52);
+  margin-bottom: 10px;
+  padding-left: 10px;
+  transition: background-color 0.3s ease;
+  font-size: 16px;
+  
 }
 
+/* Hover Effect for Job Name */
 .JobName:hover {
-  background-color: gray ;
+  background-color: gray;
+  cursor: pointer;
 }
 
-
-
+/* Active Job State */
 .active {
   background-color: gray;
+  font-weight: bold;
+  color: white;
 }
 
-
+/* Job List Styling */
 .Job {
   display: flex;
-  flex-direction: row;
-  width: 50%;
-  left: 200px;
+  flex-direction: column;
+  
+  width: 100%;
+}
+
+.OuterJob {
+  display: flex;
+  justify-content: start !important;
+  flex-direction: column;
+  align-items: end;
+  
+}
+
+/* Responsive Adjustments */
+@media (min-width: 768px) {
+  .Job {
+    flex-direction: row; 
+    width: 65%; 
+    /* justify-content: left !important; */
+  }
+
+  .OuterJob {
+    width: 40%;
+    flex-direction: column;
+  }
+  
+}
+
+.Description {
+  padding: 20px;
+  font-size: 16px;
+  width: 60%;
+}
+
+/* For smaller screens */
+@media (max-width: 768px) {
+  .JobName {
+    padding-left: 5px;
+    margin-bottom: 5px;
+    font-size: 12px;
+  }
+
+  .Description {
+    font-size: 12px;
+    width: 100%;
+  }
 }
